# cuahsi_dvc_argo_s3

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: main.yml
cuahsi_ciroh_argo_s3_pipeline/: dvc.yaml  hello_world.py  params.yaml  parflow_subset.py
tests/: test_foo.py
