[tool.poetry]
name = "cuahsi_ciroh_argo_s3_pipeline"
version = "0.0.1"
description = "An example repository showing how to use DVC pipeline with CUAHSI Argo and S3 services"
authors = ["Scott Black <fsblack@cuahsi.org>"]
repository = "https://github.com/sblack-usu/cuahsi-ciroh-argo-s3-pipeline"
documentation = "https://sblack-usu.github.io/cuahsi-ciroh-argo-s3-pipeline/"
readme = "README.md"
packages = [
  {include = "cuahsi_ciroh_argo_s3_pipeline"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
dvc = "^3.50.1"
dvc-s3 = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["cuahsi_ciroh_argo_s3_pipeline"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["cuahsi_ciroh_argo_s3_pipeline"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
